# tkr-agent-chat

./: .clinerules  .env.example  .gitignore  FIXES.md  INSTALL.md  README.md  TESTING.md  chat_database.db  claude.md  index.html  package-lock.json  package.json  postcss.config.js  restart_server.sh  run_tests.sh  setup.sh  start_env  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.workspace.ts
api_gateway/: README.md  alembic.ini  chat_database.db  conftest.py  load_test.py  pyproject.toml  pytest.ini  requirements.txt
api_gateway/chats/: README.md
api_gateway/migrations/: env.py
api_gateway/migrations/versions/: 6f56569c2e58_initial_a2a_protocol_models.py  a35d839a00db_initial_a2a_protocol_models.py
api_gateway/scripts/: basic_lmdb_test.py  check_lmdb_health.py  fix_lmdb.py  force_init_lmdb.py  force_recreate_db.py  init_db.py  init_lmdb.py  migrate_sqlite_to_lmdb.py  quick_lmdb_test.py  run_context_tests.py  set_database_type.py  simplified_init_lmdb.py  test_context.py  test_lmdb.py  test_logging.py  test_message_persistence.py  test_message_retrieval.py  test_message_saving.py  test_message_schema.py  test_socket_connection.py  test_socketio_messages.py
api_gateway/src/: database.py  db.py  db_factory.py  db_lmdb.py  main.py
api_gateway/src/models/: agent_cards.py  agent_tasks.py  api.py  chat_sessions.py  error_responses.py  message_schema.py  messages.py  shared_context.py
api_gateway/src/routes/: a2a.py  agents.py  api.py  context.py  ws.py  ws_a2a.py
api_gateway/src/services/: a2a_service.py  agent_health_service.py  chat_service.py  (+9 more)
(+238 files in other folders)
